src/app/app.css
:host {
  display: flex;
  flex-direction: column;
}

.app-wrapper {
  display: flex;
  flex-direction: column;
  flex: 1;
  background-color: #f8f8dc; /* Beige-Ton vom Eisauto */
  overflow-x: hidden;
  overflow-y: auto;
  min-height: 100vh;
}

.price-groups-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;   /* zentriert die Gruppen */
  gap: 5rem;                 /* Abstand zwischen den Gruppen */
  padding: 2rem;             /* Abstand zum Rand */
  flex: 1;                   /* füllt vertikal den Raum zwischen Header und Footer */
}

.spacer {
  flex-grow: 1;  /* schiebt footer nach unten */
}

